--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-streamlit==0.67.0
-pandas==1.0.5
-numpy==1.18.5
-scikit-learn==0.23.1
-matplotlib==3.2.2
-seaborn==0.10.1
+streamlit
+pandas
+numpy
+scikit-learn
+matplotlib
+seaborn
+time
+requests
+base64
+math
